--- a/_layouts/base-wedding.html
+++ b/_layouts/base-wedding.html
@@ -93,9 +93,9 @@ layout: base
       {% endif %}
     </div>
   
-    <div class="col-md-4">
+    <!-- <div class="col-md-4">
       {% include sidebar-post-nav.html %}
-    </div>
+    </div> -->
 
   </div>
   
