--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,10 @@ layout: null
   font-family: f_audio_mp3;
   src: url(/font/UTM\ Nokia.ttf);
 }
+@font-face {
+  font-family: f_post_bigsub;
+  src: url(/font/UTM\ DuepuntozeroBold.ttf);
+}
 
 .thiep_moi {
   color: rgb(211, 53, 25);
@@ -856,7 +860,9 @@ footer .theme-by {
 
 .intro-header .post-heading h1 {
   margin-top: 0;
+  font-family: f_post_bigsub;
   font-size: 35px;
+  line-height: 1.4;
 }
 
 .intro-header .page-heading .page-subheading,
@@ -917,7 +923,7 @@ footer .theme-by {
 
   .intro-header.big-img .page-heading,
   .intro-header.big-img .post-heading {
-    padding: 150px 0;
+    /* padding: 150px 0; */
   }
 
   .intro-header .page-heading h1 {
