--- a/css/sidebar-post-nav.css
+++ b/css/sidebar-post-nav.css
@@ -2,7 +2,7 @@
     font-size: 14px;
     background: #fff;
     box-shadow: 0 2px 10px 2px rgba(0, 0, 0, 0.2);
-    width: 300px;
+    width: fit-content;
     border-radius: 20px;
     padding-top: 5px;
     padding-bottom: 5px;
