--- a/_includes/head.html
+++ b/_includes/head.html
@@ -108,10 +108,12 @@
   <link rel="canonical" href="{{ site.url }}{{ page.url | remove: '/index.html' | remove: '.html' }}" />
   {% endif %}
 
-  {% if page.share-img %}
+  {% if page.image %}
+  <meta property="og:image" content="{{ page.image }}" />
+  {% elsif page.share-img %}
   <meta property="og:image" content="{{ page.share-img }}" />
   {% elsif site.avatar %}
-  <meta property="og:image" content="{{ site.url }}/{{ site.avatar }}" />
+  <meta property="og:image" content="{{ site.url }}/{{ site.avatar }}"  />
   {% endif %}
 
 
@@ -136,7 +138,10 @@
   <meta name="twitter:description" content="{{ page.content | strip_html | xml_escape | truncatewords: 50 }}">
   {% endif %}
 
-  {% if page.share-img %}
+  
+  {% if page.image %}
+  <meta property="twitter:image" content="{{ page.image }}" />
+  {% elsif page.share-img %}
   <meta name="twitter:image" content="{{ page.share-img }}" />
   {% elsif site.avatar %}
   <meta name="twitter:image" content="{{ site.url }}/{{ site.avatar }}" />
